Fix textarea width on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -468,7 +468,7 @@ div.problem-container {
     }
 
     .text-step-input {
-        width:500px;
+        width:450px;
     }
     .homepage-actions-container {
         width:85%;
